fix video on mobile

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -220,7 +220,7 @@ ul, ol {
   right: 50%;
   transform: translate(50%, 0);
   padding: 10px;
-  max-width: 1100px;
+  max-width: 100%;
   max-height: 480px;
 }
 
